Table users {
  user_id int [pk]
  display_name varchar
}

Table posts {
  post_id int [pk]
  user_id int [not null]
  post_title varchar
  is_active boolean
  view_count int
}

Table likes {
  like_id int [pk]
  user_id int [not null]
  post_id int [not null]
  liked_at timestamp
  dwell_ms int
}

Table hashtags {
  hashtag_id int [pk]
  hashtag_name varchar
}

Table post_hashtags {
  post_id int [not null]
  hashtag_id int [not null]

  indexes {
    (post_id, hashtag_id) [pk]
  }
}

Ref: posts.user_id > users.user_id
Ref: likes.user_id > users.user_id
Ref: likes.post_id > posts.post_id
Ref: post_hashtags.post_id > posts.post_id
Ref: post_hashtags.hashtag_id > hashtags.hashtag_id
